Projeto corrigido, adicionado estrutura de pacotes e bibliotecas

--- a/src/br/senai/application/telaCreditos.form
+++ b/src/br/senai/application/telaCreditos.form
@@ -82,7 +82,7 @@
     <Component class="javax.swing.JLabel" name="jLabel1">
       <Properties>
         <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-          <Image iconType="3" name="/my/jogoDaVelha/Imagens/dev.png"/>
+          <Image iconType="3" name="/br/senai/images/dev.png"/>
         </Property>
       </Properties>
     </Component>
