--- a/src/br/senai/application/jogoDaVelhaUI.form
+++ b/src/br/senai/application/jogoDaVelhaUI.form
@@ -74,7 +74,7 @@
     <Component class="javax.swing.JLabel" name="Logo">
       <Properties>
         <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-          <Image iconType="3" name="/my/jogoDaVelha/Imagens/LOGO.jpg.png"/>
+          <Image iconType="3" name="/br/senai/images/LOGO.jpg.png"/>
         </Property>
       </Properties>
     </Component>
