--- a/src/br/senai/application/telaConfiguracao.form
+++ b/src/br/senai/application/telaConfiguracao.form
@@ -97,7 +97,7 @@
                       <Group type="102" alignment="0" attributes="0">
                           <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
                           <Component id="jLabel3" min="-2" pref="80" max="-2" attributes="0"/>
-                          <EmptySpace min="-2" pref="140" max="-2" attributes="0"/>
+                          <EmptySpace min="-2" pref="143" max="-2" attributes="0"/>
                           <Component id="dica" min="-2" max="-2" attributes="0"/>
                           <EmptySpace min="-2" pref="22" max="-2" attributes="0"/>
                       </Group>
@@ -223,7 +223,7 @@
         <Component class="javax.swing.JLabel" name="jLabel3">
           <Properties>
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-              <Image iconType="3" name="/my/jogoDaVelha/Imagens/config.png"/>
+              <Image iconType="3" name="/br/senai/images/config.png"/>
             </Property>
           </Properties>
         </Component>
@@ -251,7 +251,7 @@
         <Component class="javax.swing.JLabel" name="dica">
           <Properties>
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-              <Image iconType="3" name="/my/jogoDaVelha/Imagens/Yoda.png"/>
+              <Image iconType="3" name="/br/senai/images/Yoda.png"/>
             </Property>
             <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
               <Border info="org.netbeans.modules.form.compat2.border.BevelBorderInfo">
